@@ -4,7 +4,8 @@ Changelog
 1.8.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Nagios: Configure a separate system contact group for each RG and put
+  only users with the wheel permission in (#20445).
 
 
 1.8.3 (2016-03-01)
